--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,7 +11,13 @@ RUN npm run build
 FROM node:20-alpine AS runner
 WORKDIR /app
 
-COPY --from=builder /app ./
-EXPOSE 3000
+ENV NODE_ENV=production
 
+COPY package.json package-lock.json ./
+RUN npm ci --omit=dev
+
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
+
+EXPOSE 3000
 CMD ["npm", "start"] 
